# scriptworkers

./: .gitignore  pyproject.toml  scriptrunner.py
apdiffscript/: config.json.tpl  pyproject.toml  run.sh
apdiffscript/src/apdiffscript/: __init__.py  actions.py  apwm.py  scopes.py
apdiffscript/src/apdiffscript/data/: task_schema.json
apdiffscript/test/: test_apwm.py  test_scopes.py
apdiffscript/test/actions/: test_diff.py
argocd-webhook/: run.sh
common/: pyproject.toml
common/src/scriptworker_common/: __init__.py
common/test/: test_utils.py
githubscript/: config.json.tpl  pyproject.toml  run.sh
githubscript/src/githubscript/: __init__.py  actions.py  scopes.py  utils.py
githubscript/src/githubscript/data/: task_schema.json
githubscript/test/: test_integration.py  test_scopes.py  test_utils.py
githubscript/test/actions/: conftest.py  test_create_apdiff_comment_on_pr.py  test_create_apfuzz_comment_on_pr.py  test_create_aptest_comment_on_pr.py  test_upload_fuzz_results.py
publishscript/: config.json.tpl  pyproject.toml  run.sh
publishscript/src/publishscript/: __init__.py  __main__.py  publish.py  scopes.py
publishscript/src/publishscript/data/: task_schema.json
publishscript/test/: test_publish.py  test_scopes.py
taskcluster/: config.yml
taskcluster/docker/apdiffscript/: Dockerfile
taskcluster/docker/argocd-webhook/: Dockerfile
taskcluster/docker/githubscript/: Dockerfile
taskcluster/docker/publishscript/: Dockerfile
taskcluster/docker/python-test/: Dockerfile
taskcluster/docker/scriptworker-base/: Dockerfile
taskcluster/kinds/docker-image/: kind.yml
taskcluster/kinds/publish/: kind.yml
taskcluster/kinds/tests/: kind.yml
taskcluster/kinds/webhook/: kind.yml
