[project]
name = "scriptworker_common"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "scriptworker",
    "taskcluster",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires =  ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src/" = ""
