[project]
name = "publishscript"
version = "0.1.0"
description = "Scriptworker for publishing merged PRs to the index"
requires-python = ">=3.12"
dependencies = [
    "scriptworker",
    "simple-github",
    "taskcluster>=96",
]

[dependency-groups]
dev = [
    "pytest",
    "pytest-asyncio",
]

[build-system]
requires =  ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel.sources]
"src/" = ""
